--- a/Makefile.am
+++ b/Makefile.am
@@ -11,25 +11,27 @@ libtoximpython_la_SOURCES = libtox_wrap.c
 ## This is the Python module interfacing to libtoximpython
 
 # Put these in the build tree
-BUILT_SOURCES = $(builddir)/tox.py $(builddir)/libtox_wrap.c
+BUILT_SOURCES = tox.py libtox_wrap.c
 # tell Make how to create the generated SWIG files
-$(builddir)/tox.py $(builddir)/libtox_wrap.c: libtox.i
-$(SWIG) $(AX_SWIG_PYTHON_OPT) -o $@ $<
+tox.py libtox_wrap.c: libtox.i
+# $(SWIG) $(AX_SWIG_PYTHON_OPT) -o $@ $<
+	$(SWIG) -python -Wall $<
 
 # Ask autotools to install the generated Python file
-python_PYTHON = $(builddir)/tox.py
+python_PYTHON = tox.py
 
 # This is the Python module
 pyexec_LTLIBRARIES = lib_toximpython.la
 # It is composed of the generated C file
-lib_toximpython_la_SOURCES = $(builddir)/libtox_wrap.c libtox.i
+lib_toximpython_la_SOURCES = libtox_wrap.c libtox.i
 
 # -module tells libtool we don't need a 'lib' prefix
 lib_toximpython_la_LDFLAGS = -module ${PYTHON_LDFLAGS}
 
-# One point of this example is to have the Python module
+
 # link to another library
 lib_toximpython_la_LIBADD = libtoximpython.la
 
-# -I$(srcdir)/src is for src/example.h
-lib_toximpython_la_CPPFLAGS = -I$(srcdir)/src ${PYTHON_CPPFLAGS}
+
+lib_toximpython_la_CPPFLAGS = -I$(srcdir)/src ${PYTHON_CPPFLAGS}  -I../libtoxcore-0.001/ -I/usr/include/python2.7/ 
+CPPFLAGS = -I$(srcdir)/src ${PYTHON_CPPFLAGS}  -I../libtoxcore-0.001/ -I/usr/include/python2.7/ -save-temps
